# dev-env

./: CHANGELOG.md  CLAUDE.md  README.md  index.html  package.json  vite.config.ts
.github/workflows/: release.yml  sync-gitee.yml
doc/: 00.overview.md  04.settings.md  05.theme.md  06.about.md  13.release.md
release-notes/: v0.0.1.md  v0.0.2.md  v0.0.3.md  v0.1.1.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_paths.rs  lib.rs  system.rs  window_chrome.rs
src-tauri/src/stack/: autostart.rs  commands.rs  config.rs  db.rs  download.rs  extract.rs  hosts.rs  manifest.rs  mod.rs  path_env.rs  process_util.rs  service.rs  site_runtime.rs  sites.rs  state.rs  store.rs  types.rs  www.rs
src-tauri/src/stack/caddy/: mod.rs
src-tauri/src/stack/cli/: mod.rs
src-tauri/src/stack/composer/: mod.rs
src-tauri/src/stack/go_runtime/: mod.rs
src-tauri/src/stack/java_runtime/: mod.rs
src-tauri/src/stack/mysql/: config.rs  install.rs  manager.rs  mod.rs  process.rs
src-tauri/src/stack/nginx/: mod.rs
src-tauri/src/stack/node_runtime/: mod.rs
src-tauri/src/stack/npm/: mod.rs
src-tauri/src/stack/openresty/: mod.rs
src-tauri/src/stack/pip/: mod.rs
src-tauri/src/stack/python_runtime/: mod.rs
src-tauri/src/stack/rabbitmq/: delayed_plugin.rs  deps.rs  mod.rs
src-tauri/src/stack/redis/: mod.rs
src-tauri/src/stack/rocketmq/: mod.rs
src-tauri/src/stack/webserver/: mod.rs  nginx_family.rs
src/components/: sidebar.tsx
src/config/: menu.json
src/lib/: i18n.ts  stack-api.ts  (+2 more)
(+16 files in other folders)
