[package]
name = "dev-env"
version = "0.0.2"
description = "Dev Env - 本地开发环境安装"
authors = ["cao.jiabin"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = ["protocol-asset"] }
tauri-plugin-log = "2"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
open = "5"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tauri-plugin-shell = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "blocking"] }
futures-util = "0.3"
once_cell = "1"
zip = "2.2"
rfd = "0.15"
auto-launch = "0.5"
sysinfo = "0.33"
winreg = "0.55"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
debug = 1
